# GTR_Framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  Makefile_osx  README.md  README.txt  Redme_p2.txt  framework.exp  framework.ipdb  framework_debug.exp  imgui.ini
data/: imgui.ini  scene.json  scene_sponza.json  shader_atlas.glsl  shader_atlas.txt  shader_atlas_osx.glsl  shader_atlas_osx.txt
data/meshes/: box.ASE
data/prefabs/: axis.glb  floor.glb
data/prefabs/gmc/: imgui.ini  scene.glb  scene.gltf
data/prefabs/house_test/: imgui.ini  scene.gltf
data/prefabs/oak_tree/: scene.gltf
data/prefabs/road/: road.gltf
data/prefabs/trash_can/: scene.gltf
data/prefabs/tree/: scene.gltf
src/: animation.cpp  animation.h  application.cpp  application.h  camera.cpp  camera.h  editor.cpp  editor.h  fbo.cpp  fbo.h  framework.cpp  framework.h  gltf_loader.cpp  gltf_loader.h  includes.h  input.cpp  input.h  litengine.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  prefab.cpp  prefab.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  sphericalharmonics.cpp  sphericalharmonics.h  task.cpp  task.h  texture.cpp  texture.h  utils.cpp  utils.h
src/core/: core.cpp  core.h  includes.h  input.cpp  input.h  math.cpp  math.h  task.cpp  task.h  ui.cpp  ui.h
src/extra/: PerlinNoise.hpp  cgltf.h  hdre.cpp  hdre.h  jpgd_idct.h  picopng.cpp  picopng.h  stb_easy_font.h  textparser.cpp  textparser.h
src/extra/coldet/: box.cpp  box.h  box_bld.cpp  coldet.cpp  coldet.h  coldet_bld.cpp  coldetimpl.h  math3d.cpp  math3d.h  mytritri.cpp  mytritri.h  sysdep.cpp  sysdep.h  tritri.c
src/extra/imgui/: ImCurveEdit.cpp  ImCurveEdit.h  ImGradient.cpp  ImGradient.h  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp  ImSequencer.h  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl2.cpp  imgui_internal.h  imgui_widgets.cpp
src/gfx/: fbo.cpp  fbo.h  gfx.cpp  gfx.h  mesh.cpp  mesh.h  shader.cpp  shader.h  sphericalharmonics.cpp  sphericalharmonics.h  texture.cpp  texture.h
src/pipeline/: animation.cpp  animation.h  camera.cpp  camera.h  light.cpp  light.h  material.cpp  material.h  prefab.cpp  prefab.h  renderer.cpp  renderer.h  scene.cpp  scene.h
src/utils/: gltf_loader.cpp  gltf_loader.h  utils.cpp  utils.h
visualstudio/: visualstudio.sln
visualstudio/VS2015/: visualstudio.vcxproj  visualstudio.vcxproj.filters
visualstudio/VS2015/Debug/: framework_debug.exe.recipe  vc142.idb
visualstudio/VS2015/Debug/framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  framework.lastbuildstate  framework.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
visualstudio/VS2015/Release/: framework.exe.recipe
visualstudio/VS2015/Release/framework.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  framework.lastbuildstate  framework.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
xcode/: README.txt
xcode/GTR_XCODE.xcodeproj/: project.pbxproj
xcode/GTR_XCODE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/GTR_XCODE.xcodeproj/project.xcworkspace/xcuserdata/alexjoel2899.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/GTR_XCODE.xcodeproj/project.xcworkspace/xcuserdata/tamat.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/GTR_XCODE.xcodeproj/xcshareddata/xcschemes/: TJE_XCODE.xcscheme
xcode/GTR_XCODE.xcodeproj/xcuserdata/alexjoel2899.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/GTR_XCODE.xcodeproj/xcuserdata/alexjoel2899.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/GTR_XCODE.xcodeproj/xcuserdata/tamat.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/GTR_XCODE.xcodeproj/xcuserdata/tamat.xcuserdatad/xcschemes/: SDL_OSX_TEST.xcscheme  xcschememanagement.plist
xcode/SDL_OSX_TEST/: TJE_XCODE-Info.plist
